--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          dockerfile: ./RoomAdvisor/Dockerfile
           push: true
           tags: username/roomadvisor:latest
         env:
