--- a/RoomAdvisor/Dockerfile
+++ b/RoomAdvisor/Dockerfile
@@ -1,8 +1,5 @@
-# Unter https://aka.ms/customizecontainer erfahren Sie, wie Sie Ihren Debugcontainer anpassen und wie Visual Studio dieses Dockerfile verwendet, um Ihre Images für ein schnelleres Debuggen zu erstellen.
-
 # Base image for runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -11,16 +8,20 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RoomAdvisor/RoomAdvisor.csproj", "RoomAdvisor/"]
-RUN dotnet restore "./RoomAdvisor/RoomAdvisor.csproj"
-COPY . .
+
+# Copy project file and restore dependencies
+COPY RoomAdvisor/RoomAdvisor.csproj .
+RUN dotnet restore "RoomAdvisor.csproj"
+
+# Copy the rest of the application code
+COPY RoomAdvisor/ ./RoomAdvisor/
 WORKDIR "/src/RoomAdvisor"
-RUN dotnet build "./RoomAdvisor.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "RoomAdvisor.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./RoomAdvisor.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "RoomAdvisor.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # Final stage
 FROM base AS final
