--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,30 +3,25 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master 
-  workflow_dispatch: 
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-    
+      # Step 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-     
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-     
+      # Step 3: Build and Push Docker Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
         with:
@@ -38,6 +33,10 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
 
-     
+      # Step 4: Pull the Docker Image from Docker Hub
+      - name: Pull Docker Image
+        run: docker pull leonburghardtdev/roomadvisor:latest
+
+      # Step 5: Inspect the Docker Image
       - name: Docker Image Inspect
         run: docker image inspect leonburghardtdev/roomadvisor:latest
